--- a/app/package.json
+++ b/app/package.json
@@ -3,6 +3,7 @@
     "private": true,
     "version": "1.0.0",
     "type": "module",
+    "homepage": "https://rfammon.github.io/estudos-tracker",
     "scripts": {
         "dev": "vite",
         "build": "tsc -b && vite build",
@@ -29,6 +30,7 @@
         "clsx": "^2.1.0",
         "date-fns": "^3.3.1",
         "dotenv": "^17.3.1",
+        "framer-motion": "^12.34.0",
         "lucide-react": "^0.344.0",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
